sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:9: error: value ==- is not a member of Int
      if(va<min || min==-1){
                      ^