sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var min = 0;
  var va = 0;
  for(i<-0 to getNombreValeurs()-1){
    min = -1;
    for(j<-i to getNombreValeurs()-1){
      va = getValeur(j);
      if(va<min || min==-1){
        min = va;
      }
    }
    setValeur(i,min);
  }
}